@@ -89,6 +89,10 @@ public slots:
   void onAppAboutToQuit();
 
 private slots:
+  //
+  // Manual slots
+  //
+
   void onCreated();
   void onShown();
   void onConfigScopesSaving();
@@ -109,7 +113,9 @@ private slots:
   void onWindowSaveTimerTimeout();
   void onServerConnectionConfigureClient(const QString &clientName);
 
-  // autoconnect slots
+  //
+  // Auto-connect slots
+  //
   void on_m_pButtonApply_clicked();
   void on_m_pLabelComputerName_linkActivated(const QString &link);
   void on_m_pLabelFingerprint_linkActivated(const QString &link);
@@ -120,9 +126,9 @@ private slots:
   void on_m_pButtonConfigureServer_clicked();
   bool on_m_pActionSave_triggered();
   void on_m_pActionAbout_triggered();
-  void on_m_pActionHelp_triggered();
+  void on_m_pActionHelp_triggered() const;
   void on_m_pActionSettings_triggered();
-  void on_m_pActivate_triggered();
+  void on_m_pActionActivate_triggered();
   void on_m_pLineEditHostname_returnPressed();
   void on_m_pLineEditClientIp_returnPressed();
   void on_m_pLineEditHostname_textChanged(const QString &text);
