@@ -70,7 +70,7 @@ TEST_F(LicenseTests, isExpiring_validV2TrialBasicSerial_isExpiring) {
                   "F6D70616E79206E616D653B313B38363430307D");
   setNow(license, 0);
 
-  EXPECT_FALSE(license.isExpiring());
+  EXPECT_FALSE(license.isExpiringSoon());
 }
 
 TEST_F(LicenseTests, isExpiring_validV2TrialBasicSerial_isBasicEdition) {
@@ -83,13 +83,13 @@ TEST_F(LicenseTests, isExpiring_validV2TrialBasicSerial_isBasicEdition) {
 }
 
 TEST_F(LicenseTests, isExpiring_expiringV2TrialBasicSerial_returnTrue) {
-  // {v2;trial;basic;Bob;1;email;company name;0;86400}
+  // {v2;trial;basic;Bob;1;email;company name;86400;0}
   License license("7B76323B747269616C3B62617369633B426F623B313B656D61696C3B636"
-                  "F6D70616E79206E616D653B303B38363430307D");
-  setNow(license, 1);
+                  "F6D70616E79206E616D653B38363430303B307D");
+  setNow(license, 86401);
 
   EXPECT_TRUE(license.isTrial());
-  EXPECT_TRUE(license.isExpiring());
+  EXPECT_TRUE(license.isExpiringSoon());
 }
 
 TEST_F(LicenseTests, isExpired_validV2TrialBasicSerial_returnFalse) {
@@ -157,18 +157,18 @@ TEST_F(LicenseTests, isExpiring_validV2SubscriptionBasicSerial_returnFalse) {
   setNow(license, 0);
 
   EXPECT_TRUE(license.isSubscription());
-  EXPECT_FALSE(license.isExpiring());
+  EXPECT_FALSE(license.isExpiringSoon());
   EXPECT_EQ(kBasic, license.productEdition());
 }
 
 TEST_F(LicenseTests, isExpiring_expiringV2SubscriptionBasicSerial_returnTrue) {
-  // {v2;subscription;basic;Bob;1;email;company name;0;86400}
+  // {v2;subscription;basic;Bob;1;email;company name;86400;0}
   License license("7B76323B737562736372697074696F6E3B62617369633B426F623B313B6"
-                  "56D61696C3B636F6D70616E79206E616D653B303B38363430307D");
-  setNow(license, 1);
+                  "56D61696C3B636F6D70616E79206E616D653B38363430303B307D");
+  setNow(license, 86401);
 
   EXPECT_TRUE(license.isSubscription());
-  EXPECT_TRUE(license.isExpiring());
+  EXPECT_TRUE(license.isExpiringSoon());
 }
 
 TEST_F(LicenseTests, isExpired_expiredV2SubscriptionBasicSerial_returnTrue) {
