@@ -72,6 +72,7 @@ Enhancements:
 - #7426 Fixed warnings and enable errors as warnings
 - #7427 More reliable button click detection for add client dialog
 - #7428 Refactor settings dialog to simplify enable/disable logic
+- #7429 Parse date numbers as long instead of int
 
 # 1.14.6
 
